# claude-token-tracker

./: .gitignore  CLAUDE.md  README.md  dashboard.js  data-loader.js  float.html  index.html  install.js  installer.nsi  main.js  new-theme.pen  package-lock.json  package.json  preload-float.js  preload.js  track-usage.cjs  track-usage.js  view-usage.js
src/: App.css  App.tsx  main.tsx  themes.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: conversation.rs  mod.rs  settings.rs  system.rs  usage.rs
src-tauri/src/data/: loader.rs  mod.rs  models.rs  pricing.rs
src/api/: index.ts  types.ts
src/components/chat/: ChatPage.css  ChatPage.tsx
src/components/compare/: ComparePage.css  ComparePage.tsx
src/components/float/: FloatWindow.css  FloatWindow.tsx
src/components/layout/: PageHeader.css  PageHeader.tsx  Sidebar.css  Sidebar.tsx  TabNav.css  TabNav.tsx  TitleBar.css  TitleBar.tsx
src/components/overview/: ActivityPanel.css  ActivityPanel.tsx  BucketCards.css  BucketCards.tsx  OverviewPage.css  OverviewPage.tsx  RequestTable.css  RequestTable.tsx  StatsGrid.css  StatsGrid.tsx
src/components/ranking/: RankingPage.css  RankingPage.tsx
src/components/sessions/: SessionsPage.css  SessionsPage.tsx
src/components/settings/: SettingsPage.css  SettingsPage.tsx
src/styles/: global.css  theme.css
