[package]
name = "claude-token-tracker"
version = "2.0.0"
description = "Claude Code Token Usage Tracker"
edition = "2021"

[lib]
name = "claude_token_tracker"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
notify = "7"
notify-debouncer-mini = "0.5"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
walkdir = "2"
